--- a/style.css/mystyle.css
+++ b/style.css/mystyle.css
@@ -53,3 +53,52 @@ body {
 .navbar-links li:hover {
     background-color: #555;
 }
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0 0 0 0;
+  }
+  .footer a {
+    color: rgb(97, 97, 168);
+    display: inline-block;
+    text-align: center;
+    margin: auto;
+    padding-left: 100px;
+    padding-right: 100px;
+    box-sizing: border-box;
+  }
+ul {
+    text-align: center;
+    list-style-position: inside;
+}
+.row {
+    width: 100%;
+    display: table;
+    clear: both;
+    background-color: lightblue;
+    color:rgb(0, 0, 0);
+    padding-inline: 10px;
+    box-sizing: border-box;
+  }
+  .favpics {
+    width: 35%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .column {
+    float: left;
+    width: 50% ;
+    background-color: lightblue;
+    color: white;
+    text-indent: 10px;
+    min-height: 225px;
+    text-align: left;
+  }
