--- a/style.css/mystyle.css
+++ b/style.css/mystyle.css
@@ -1,104 +1,145 @@
 body {
-    background-color: lightblue;
-  }
-  
-  h1 {
-    color: rgb(3, 99, 224);
-    margin-left: 20px;
-  }
-  * {
-    box-sizing: border-box;
+  background-color: lightblue;
+}
+
+h1 {
+  color: rgb(3, 99, 224);
+  margin-left: 20px;
+}
+* {
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .navbar {
-    display: flex;
-    position: relative;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #333;
-    color: white;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  color: white;
 }
 
 .brand-title {
-    font-size: 1.5rem;
-    margin: .5rem;
+  font-size: 1.5rem;
+  margin: .5rem;
 }
 
 .navbar-links {
-    height: 100%;
+  height: 100%;
 }
 
 .navbar-links ul {
-    display: flex;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 .navbar-links li {
-    list-style: none;
+  list-style: none;
 }
 
 .navbar-links li a {
-    display: block;
-    text-decoration: none;
-    color: white;
-    padding: 1rem;
+  display: block;
+  text-decoration: none;
+  color: white;
+  padding: 1rem;
 }
 
 .navbar-links li:hover {
-    background-color: #555;
+  background-color: #555;
 }
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #333;
-    color: white;
-    text-align: center;
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0 0 0 0;
-  }
-  .footer a {
-    color: rgb(97, 97, 168);
-    display: inline-block;
-    text-align: center;
-    margin: auto;
-    padding-left: 100px;
-    padding-right: 100px;
-    box-sizing: border-box;
-  }
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0 0 0 0;
+}
+.footer a {
+  color: rgb(97, 97, 168);
+  display: inline-block;
+  text-align: center;
+  margin: auto;
+  padding-left: 100px;
+  padding-right: 100px;
+  box-sizing: border-box;
+}
 ul {
-    text-align: center;
-    list-style-position: inside;
+  text-align: center;
+  list-style-position: inside;
 }
 .row {
-    width: 100%;
-    display: table;
-    clear: both;
-    background-color: lightblue;
-    color:rgb(0, 0, 0);
-    padding-inline: 10px;
-    box-sizing: border-box;
-  }
-  .favpics {
-    width: 35%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .column {
-    float: left;
-    width: 50% ;
-    background-color: lightblue;
-    color: white;
-    text-indent: 10px;
-    min-height: 225px;
-    text-align: left;
-  }
+  width: 100%;
+  display: table;
+  clear: both;
+  background-color: lightblue;
+  color:rgb(0, 0, 0);
+  padding-inline: 10px;
+  box-sizing: border-box;
+}
+.favpics {
+  width: 35%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.column {
+  float: left;
+  width: 50% ;
+  background-color: lightblue;
+  color: white;
+  text-indent: 10px;
+  min-height: 225px;
+  text-align: left;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: #333;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+img.snake-img{
+  width: 30%;
+  height:30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
